--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     },
     "content_scripts": [
       {
-        "matches": ["<all_urls>"],
+        "matches": ["https://ums.seu.edu.bd/"],
         "js": ["content.js"]
       }
     ]
